--- a/UI/templates/preview.html
+++ b/UI/templates/preview.html
@@ -17,6 +17,15 @@ END
 <form data-dojo-type="lsmb/lib/Form" action="template.pl" method="post" enctype="multipart/form-data">
 <?lsmb
 PROCESS HIDDENS;
+PROCESS select element_data = {
+           name = 'language_code'
+             id = 'language_code_upload'
+        options = languages
+  default_blank = 1
+ default_values = [language_code]
+      text_attr = 'description'
+     value_attr = 'code'
+};
 PROCESS input element_data = {
     type = "file"
     name = "template_file"
