--- a/templates/demo_with_images/invoice.html
+++ b/templates/demo_with_images/invoice.html
@@ -9,7 +9,9 @@
 
     <th colspan=3>
       <h4 style="text-transform:uppercase">
-          <?lsmb text('Invoice') ?></h4>
+        <?lsmb IF reverse; text('Credit Invoice');
+               ELSE; text('Invoice');
+               END; ?></h4>
     </th>
   </tr>
 
@@ -27,17 +29,17 @@
         <tr valign=top>
           <td><?lsmb name ?>
           <br><?lsmb address1 ?>
-	  <?lsmb IF address2 ?>
+          <?lsmb IF address2 ?>
           <br><?lsmb address2 ?>
-	  <?lsmb END ?>
+          <?lsmb END ?>
           <br><?lsmb city ?>
-	  <?lsmb IF state ?>
-	  , <?lsmb state ?>
-	  <?lsmb END ?>
-	  <?lsmb zipcode ?>
-	  <?lsmb IF country ?>
-	  <br><?lsmb country ?>
-	  <?lsmb END ?>
+          <?lsmb IF state ?>
+          , <?lsmb state ?>
+          <?lsmb END ?>
+          <?lsmb zipcode ?>
+          <?lsmb IF country ?>
+          <br><?lsmb country ?>
+          <?lsmb END ?>
           <br>
 
           <?lsmb IF contact ?>
@@ -60,17 +62,17 @@
 
           <td><?lsmb shiptoname ?>
           <br><?lsmb shiptoaddress1 ?>
-	  <?lsmb IF shiptoaddress2 ?>
+          <?lsmb IF shiptoaddress2 ?>
           <br><?lsmb shiptoaddress2 ?>
-	  <?lsmb END ?>
+          <?lsmb END ?>
           <br><?lsmb shiptocity ?>
-	  <?lsmb IF shiptostate ?>
-	  , <?lsmb shiptostate ?>
-	  <?lsmb END ?>
-	  <?lsmb shiptozipcode ?>
-	  <?lsmb IF shiptocountry ?>
-	  <br><?lsmb shiptocountry ?>
-	  <?lsmb END ?>
+          <?lsmb IF shiptostate ?>
+          , <?lsmb shiptostate ?>
+          <?lsmb END ?>
+          <?lsmb shiptozipcode ?>
+          <?lsmb IF shiptocountry ?>
+          <br><?lsmb shiptocountry ?>
+          <?lsmb END ?>
           <br>
 
           <?lsmb IF shiptocontact ?>
@@ -103,24 +105,24 @@
     <td>
       <table width=100% border=1>
         <tr>
-	  <th width=14% align=left nowrap><?lsmb text('Invoice #') ?></th>
-	  <th width=14% align=left nowrap><?lsmb text('Date') ?></th>
-	  <th width=14% align=left nowrap><?lsmb text('Due') ?></th>
-	  <th width=14% align=left><?lsmb text('Order #') ?></th>
-	  <th width=14% align=left nowrap><?lsmb text('Salesperson') ?></th>
-	  <th width=14% align=left nowrap><?lsmb text('Shipping Point') ?></th>
-	  <th width=14% align=left nowrap><?lsmb text('Ship via') ?></th>
-	</tr>
+          <th width=14% align=left nowrap><?lsmb text('Invoice #') ?></th>
+          <th width=14% align=left nowrap><?lsmb text('Date') ?></th>
+          <th width=14% align=left nowrap><?lsmb text('Due') ?></th>
+          <th width=14% align=left><?lsmb text('Order #') ?></th>
+          <th width=14% align=left nowrap><?lsmb text('Salesperson') ?></th>
+          <th width=14% align=left nowrap><?lsmb text('Shipping Point') ?></th>
+          <th width=14% align=left nowrap><?lsmb text('Ship via') ?></th>
+        </tr>
 
-	<tr>
-	  <td><?lsmb invnumber ?></td>
-	  <td><?lsmb invdate ?></td>
-	  <td><?lsmb duedate ?></td>
-	  <td><?lsmb ordnumber ?>&nbsp;</td>
-	  <td><?lsmb employee ?>&nbsp;</td>
-	  <td><?lsmb shippingpoint ?>&nbsp;</td>
-	  <td><?lsmb shipvia ?>&nbsp;</td>
-	</tr>
+        <tr>
+          <td><?lsmb invnumber ?></td>
+          <td><?lsmb invdate ?></td>
+          <td><?lsmb duedate ?></td>
+          <td><?lsmb ordnumber ?>&nbsp;</td>
+          <td><?lsmb employee ?>&nbsp;</td>
+          <td><?lsmb shippingpoint ?>&nbsp;</td>
+          <td><?lsmb shipvia ?>&nbsp;</td>
+        </tr>
       </table>
     </td>
   </tr>
@@ -160,41 +162,41 @@
         <tr>
           <td colspan=9><hr noshade></td>
         </tr>
-    
+
+          <?lsmb IF tax ?>
         <tr>
-          <?lsmb IF taxincluded ?>
-          <th colspan=7 align=right><?lsmb text('Total') ?></th>
-          <td colspan=2 align=right><?lsmb invtotal ?></td>
-          <?lsmb ELSE ?>
           <th colspan=7 align=right><?lsmb text('Subtotal') ?></th>
           <td colspan=2 align=right><?lsmb subtotal ?></td>
-          <?lsmb END ?>
         </tr>
 
         <?lsmb FOREACH tax ?>
-	<?lsmb loop_count = loop.count - 1 ?>
+        <?lsmb loop_count = loop.count - 1 ?>
         <tr>
           <th colspan=7 align=right><?lsmb taxdescription.${loop_count} ?> on <?lsmb taxbase.${loop_count} ?> @ <?lsmb taxrate.${loop_count} ?> %</th>
           <td colspan=2 align=right><?lsmb tax.${loop_count} ?></td>
         </tr>
         <?lsmb END ?>
+        <?lsmb END ?>
+
+        <tr>
+          <th colspan=7 align=right><?lsmb text('Total') ?></th>
+          <td colspan=2 align=right><?lsmb invtotal ?></td>
+        </tr>
 
         <?lsmb IF paid ?>
         <tr>
           <th colspan=7 align=right><?lsmb text('Paid') ?></th>
           <td colspan=2 align=right>- <?lsmb paid ?></td>
         </tr>
-        <?lsmb END ?>
 
         <tr>
           <td colspan=5>&nbsp;</td>
           <td colspan=4><hr noshade></td>
         </tr>
 
-        <?lsmb IF total ?>
         <tr>
           <td colspan=5>&nbsp;</td>
-          <th colspan=2 align=right nowrap><?lsmb text('Balance Due') ?></th>
+          <th colspan=2 align=right nowrap><?lsmb text('Balance') ?></th>
           <th colspan=2 align=right><?lsmb total ?></th>
         </tr>
         <?lsmb END ?>
@@ -216,8 +218,8 @@
                <?lsmb END ?></td>
           <?lsmb END ?>
 
-	  <td><?lsmb text_amount ?> ***** <?lsmb decimal ?>/100</td>
-	  
+          <td><?lsmb text_amount ?> ***** <?lsmb decimal ?>/100</td>
+          
           <td align=right nowrap>
           <?lsmb text('All prices in [_1]', currency) ?>
           </td>
@@ -226,7 +228,7 @@
     </td>
   </tr>
 
-  <?lsmb IF paid_1 ?>
+  <?lsmb IF paymentdate.0 ?>
   <tr>
     <td>&nbsp;</td>
 
@@ -251,7 +253,7 @@
         </tr>
 
         <?lsmb FOREACH payment ?>
-	<?lsmb loop_count = loop.count - 1 ?>
+        <?lsmb loop_count = loop.count - 1 ?>
         <tr>
           <td><?lsmb paymentdate.${loop_count} ?></td>
           <td><?lsmb paymentaccount.${loop_count} ?></td>
